Update project files and add new structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-openai
-requests
-anthropic
-python-dotenv
-Pillow
-scikit-learn
-pandas
-numpy
-matplotlib
-e2b-code-interpreter
+# Core runtime deps (pinned)
+openai==1.58.1
+requests==2.32.3
+anthropic==0.50.0
+python-dotenv==1.0.1
+Pillow==10.4.0
+numpy==1.26.4
+pandas==2.2.2
+scikit-learn==1.5.1
+matplotlib==3.9.2
+e2b-code-interpreter==0.0.18
+
+# New core package deps
+pydantic==2.8.2
+pydantic-settings==2.4.0
+
+# Frontend/backend runtime deps
+Flask==3.0.3
+flask-cors==4.0.1
+
+# Dev deps
+pytest==8.3.2
+black==24.8.0
+isort==5.13.2
+mypy==1.11.2
