--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ numpy==1.26.4
 pandas==2.2.2
 scikit-learn==1.5.1
 matplotlib==3.9.2
-e2b-code-interpreter==0.0.18
+e2b-code-interpreter
 
 # New core package deps
 pydantic==2.8.2
