--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ warn_unused_ignores = true
 no_implicit_optional = true
 check_untyped_defs = false
 ignore_missing_imports = true
+explicit_package_bases = true
+namespace_packages = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
