--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,6 @@ pydantic-settings==2.4.0
 # Frontend/backend runtime deps
 Flask==3.0.3
 flask-cors==4.0.1
+Flask-SocketIO==5.3.6
+eventlet==0.36.1
 gunicorn==22.0.0
