chore: add local output files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,7 @@ publishprofile.xml
 .mcp.json
 .cursor/
 .claude/settings.local.json
+
+# Local tool outputs
+pytest_output.txt
+src/frontend/lint_output.txt
